# BigNum

./: .gitignore  CMakeLists.txt
src/: BinaryTest.cpp  CMakeLists.txt  Integer.cpp  Integer.h  Natural.cpp  Natural.h  NaturalTest.cpp  Natural_Arithmetic.cpp  Natural_Move.cpp  binary.h  main.cpp
src/test/: IntegerTest.cpp
